tests/baselines/reference/typeArgumentInferenceErrors.errors.txt
tests/cases/conformance/expressions/functionCalls/typeArgumentInferenceErrors.ts(3,31): error TS2345: Argument of type '3' is not assignable to parameter of type '文字'.
tests/cases/conformance/expressions/functionCalls/typeArgumentInferenceErrors.ts(7,35): error TS2345: Argument of type '(x: 文字) => 文字' is not assignable to parameter of type '(x: 数字) => 无值'.
  Types of parameters 'x' and 'x' are incompatible.
    Type '数字' is not assignable to type '文字'.
tests/cases/conformance/expressions/functionCalls/typeArgumentInferenceErrors.ts(11,35): error TS2345: Argument of type '(x: 文字) => 文字' is not assignable to parameter of type '(x: 数字) => 无值'.
  Types of parameters 'x' and 'x' are incompatible.
    Type '数字' is not assignable to type '文字'.
tests/cases/conformance/expressions/functionCalls/typeArgumentInferenceErrors.ts(15,41): error TS2345: Argument of type '(n: 文字) => 文字' is not assignable to parameter of type '(b: 数字) => 数字'.
  Types of parameters 'n' and 'b' are incompatible.
    Type '数字' is not assignable to type '文字'.


==== tests/cases/conformance/expressions/functionCalls/typeArgumentInferenceErrors.ts (4 errors) ====
    // Generic call with multiple type parameters and only one used in parameter type annotation
    function someGenerics1<T, U>(n: T, m: number) { }
    someGenerics1<string, number>(3, 4); // Error
                                  ~
!!! error TS2345: Argument of type '3' is not assignable to parameter of type '文字'.
    
    // 2 parameter generic call with argument 1 of type parameter type and argument 2 of function type whose parameter is of type parameter type
    function someGenerics4<T, U>(n: T, f: (x: U) => void) { }
    someGenerics4<string, number>('', (x: string) => ''); // Error
                                      ~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(x: 文字) => 文字' is not assignable to parameter of type '(x: 数字) => 无值'.
!!! error TS2345:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2345:     Type '数字' is not assignable to type '文字'.
    
    // 2 parameter generic call with argument 2 of type parameter type and argument 1 of function type whose parameter is of type parameter type
    function someGenerics5<U, T>(n: T, f: (x: U) => void) { }
    someGenerics5<number, string>('', (x: string) => ''); // Error
                                      ~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(x: 文字) => 文字' is not assignable to parameter of type '(x: 数字) => 无值'.
!!! error TS2345:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2345:     Type '数字' is not assignable to type '文字'.
    
    // Generic call with multiple arguments of function types that each have parameters of the same generic type
    function someGenerics6<A>(a: (a: A) => A, b: (b: A) => A, c: (c: A) => A) { }
    someGenerics6<number>((n: number) => n, (n: string) => n, (n: number) => n); // Error
                                            ~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(n: 文字) => 文字' is not assignable to parameter of type '(b: 数字) => 数字'.
!!! error TS2345:   Types of parameters 'n' and 'b' are incompatible.
!!! error TS2345:     Type '数字' is not assignable to type '文字'.
    